<resources>
    <string name="app_name">Tetris Game</string>
    <string name="best">Best</string>
    <string name="score">Score</string>
    <string name="level">Level</string>
    <string name="next">Next</string>
    <string name="text_pause">ПАУЗА</string>
    <string name="game_over">ИГРА ОКОНЧЕНА</string>
    <string name="restart">ПЕРЕЗАПУСТИТЬ</string>
    <string name="exit">ВЫХОД</string>
    <string name="continue_game">ПРОДОЛЖИТЬ</string>
    <string name="new_game">НОВАЯ ИГРА</string>
    <string name="start_game">Играть</string>
    <string name="settings">Настройки</string>
    <string name="records">Рекорды</string>
    <string name="exit_main">Выход</string>
    <string name="gradient">Градиент</string>
    <string name="blocks_initial_level">Стартовые линии</string>
    <string name="initial_level">Начальный уровень</string>
    <string name="blocks_form">Форма блоков</string>
    <string name="background_color">Цвет фона</string>
    <string name="close">ЗАКРЫТЬ</string>
    <string name="show_shadow">Показывать тень</string>
    <string name="vibration">Вибрация</string>
    <string name="sound_effects">Звуковые эффекты</string>
    <string name="music">Музыка</string>

</resources>